<resources>
    <string name="app_name">PanganVentory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_button">Camera Button</string>
    <string name="date">Date</string>
    <string name="move_to_detail">Move to Detail</string>
    <string name="detail_image">detail image</string>
    <string name="title">Item Name</string>
    <string name="last_for">Last for : </string>
    <string name="exp_date">Expired Date : </string>
    <string name="panganventory_logo">logo</string>
    <string name="add_more_button">add more item</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="doesn_t_have_an_account">doesn\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="app_notif">Sudah ada bahan makananmua yang mendekati tanggal kadaluarsa. Habiskan ya!</string>
</resources>