<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_movie"
    android:layout_width="330dp"
    android:layout_height="95dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_item_title"
            style="@style/DetailTitleFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/DescFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_for" />

            <TextView
                android:id="@+id/tv_item_last_for"
                style="@style/DescFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_item_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
                tools:text="5 days" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/DescFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_date" />

            <TextView
                android:id="@+id/tv_item_exp_date"
                style="@style/DescFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="5/28/21" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/detail_image"
            android:src="@color/yellow_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>